service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: version-service
  labels:
    app: version-service
spec:
  selector:
    app: version-service
  ports:
    - name: http
      port: 8086
      targetPort: 8086
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: version-service
  labels:
    app: version-service
spec:
  to:
    kind: Service
    name: version-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
